add profile links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     <div class="table-container">
+
+        <h1>Tyler A. Hennen, Dr.-Ing</h1>
+
+        <table>
+            <tr>
+                <td>Email:</td>
+                <td><a href="mailto:tyler@hennen.us">tyler@hennen.us</a></td>
+            </tr>
+            <tr>
+                <td>GitHub:</td>
+                <td><a href="https://github.com/thennen">github.com/thennen</a></td>
+            </tr>
+            <tr>
+                <td>LinkedIn:</td>
+                <td><a href="https://www.linkedin.com/in/tylerhennen">linkedin.com/in/tylerhennen</a></td>
+            </tr>
+        </table>
+
+        <h2>Publications</h2>
+
         <table class="citation-table" id="citationTable">
             <thead>
                 <tr>
@@ -110,7 +130,7 @@
     
                 <tr>
                     <td>Danylo Babich, Julien Tranchant, Coline Adda, Benoit Corraze, Marie-Paule Besland, Peter Warnicke, Daniel Bedau, Patricia Bertoncini, Jean-Yves Mevellec, Bernard Humbert, Jonathan A. J. Rupp, Tyler Hennen, Dirk J. Wouters, Roger Llopis, Laurent Cario, Etienne Janod</td>
-                    <td>Lattice Contraction Induced by Resistive Switching in Chromium-Doped V2O3: A Hallmark of Mott Physics</td>
+                    <td>Lattice Contraction Induced by Resistive Switching in Chromium-Doped V<sub>2</sub>O<sub>3</sub>: A Hallmark of Mott Physics</td>
                     <td>arXiv</td>
                     <td>2021</td>
                     <td><a href="https://arxiv.org/abs/2105.05093", target="_blank" rel="noopener noreferrer">[arXiv]</a></td>
