Very important and necessary updates

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tyler Hennen</title>
+    <title>Dr. Tyler Hennen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="table-container">
 
-        <h1>Tyler A. Hennen, Dr.-Ing</h1>
+        <h1>Tyler A. Hennen</h1>
 
-        <table>
+        <table class="basic-table">
             <tr>
                 <td>Email:</td>
                 <td><a href="mailto:tyler@hennen.us">tyler@hennen.us</a></td>
@@ -25,6 +25,57 @@
                 <td><a href="https://www.linkedin.com/in/tylerhennen">linkedin.com/in/tylerhennen</a></td>
             </tr>
         </table>
+
+        <h2>Education</h2>
+
+        <table class="basic-table">
+            <tr>
+                <td>2023<br>&nbsp;</td>
+                <td>
+                    PhD / Dr.-Ing, <b>RWTH Aachen University</b>, Germany
+                    <br>
+                    Electrical Engineering (<i>summa cum laude</i>)
+                </td>
+            </tr>
+            <tr>
+                <td>2016<br>&nbsp;</td>
+                <td>
+                    Master of Science, <b>The University of California</b>, San Diego
+                    <br>
+                    Electrical and Computer Engineering: Applied Physics
+                </td>
+            </tr>
+            <tr>
+                <td>2010<br>&nbsp;</td>
+                <td>
+                    Bachelor of Science, <b>The University of Minnesota</b>, Minneapolis
+                    <br>
+                    Physics (<i>magna cum laude</i>) and Mathematics
+                </td>
+            </tr>
+        </table>
+
+        <h2>Awards</h2>
+
+        <table class="basic-table">
+            <tr>
+                <td>2024</td>
+                <td>Borchers-Plakette (RWTH Aachen)</td>
+            </tr>
+            <tr>
+                <td>2014</td>
+                <td>UCSD Electrical and Computer Engineering Departmental Fellowship</td>
+            </tr>
+            <tr>
+                <td>2009</td>
+                <td>Edmond G. Franklin Scholarship in Physics</td>
+            </tr>
+            <tr>
+                <td>2008</td>
+                <td>Undergraduate Research Opportunity Grant</td>
+            </tr>
+        </table>
+
 
         <h2>Publications</h2>
 
