--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     gtag('js', new Date());
 
     gtag('config', 'G-DLBK1VQJ2J');
+
+    document.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+        gtag('event', 'link_click', {
+        'event_category': 'outbound',
+        'event_label': link.href,
+        'value': 1
+        });
+    });
+    });
     </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Tyler Hennen</title>
