--- a/index.html
+++ b/index.html
@@ -7,23 +7,12 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-DLBK1VQJ2J');
-
-    document.querySelectorAll('a').forEach(link => {
-    link.addEventListener('click', () => {
-        gtag('event', 'link_click', {
-        'event_category': 'outbound',
-        'event_label': link.href,
-        'value': 1
-        });
-    });
-    });
     </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Tyler Hennen</title>
+    <title>Tyler Hennen, PhD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
