--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DLBK1VQJ2J"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-DLBK1VQJ2J');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-DLBK1VQJ2J');
     </script>
 
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         <table class="basic-table">
             <tr>
                 <td>Email:</td>
-                <td><a href="mailto:tyler@hennen.us">tyler@hennen.us</a></td>
+                <td><a href="mailto:tyler@hennen.us">tyler@hennen.us</a> <a href="publickey.tyler@hennen.us.asc">[PGP]</a></td>
             </tr>
             <tr>
                 <td>GitHub:</td>
