--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DLBK1VQJ2J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-DLBK1VQJ2J');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications</title>
@@ -14,9 +23,9 @@
 </head>
 <body>
 
-<h2>Publications</h2>
+<h2>Tyler Hennen's Publications</h2>
 
-<!-- <a href="">Boring version</a> -->
+<!-- <a href="">Boring version/bibtex version?</a> -->
 
 <br>
 
