--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </tr>
             <tr>
                 <td>2009</td>
-                <td>Edmond G. Franklin Scholarship in Physics</td>
+                <td>Edmond B. Franklin Scholarship in Physics</td>
             </tr>
             <tr>
                 <td>2008</td>
