--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
                     <div class="card-content">
                         <h3>Synaptogen: A Cross-Domain Generative Device Model for Large-Scale Neuromorphic Circuit Design</h3>
                         <p><strong>Tyler&nbsp;Hennen</strong>, Leon&nbsp;Brackmann, Tobias&nbsp;Ziegler, Sebastian&nbsp;Siegel, Stephan&nbsp;Menzel, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters, Daniel&nbsp;Bedau</p>
-                        <p><em>IEEE Transactions on Electron Devices</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>IEEE Transactions on Electron Devices</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">July 2024</p>
                     </div>
                     </div>
@@ -49,7 +49,7 @@
                     <div class="card-content">
                         <h3>Full Factorial Analysis of Gradual Switching in Thermally Oxidized Memristive Devices</h3>
                         <p>Pascal&nbsp;Stasner, <strong>Tyler&nbsp;Hennen</strong>, Ekaterina&nbsp;Gorbunova, Alejandro&nbsp;García&nbsp;Munoz, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters</p>
-                        <p><em>Journal of Applied Physics</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Journal of Applied Physics</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">June 2024</p>
                     </div>
                     </div>
@@ -61,7 +61,7 @@
                     <div class="card-content">
                         <h3>Bulk-Like Mott-Transition in Ultrathin Cr-Doped V<sub>2</sub>O<sub>3</sub> Films and the Influence of Its Variability on Scaled Devices</h3>
                         <p>Johannes&nbsp;Mohr, <strong>Tyler&nbsp;Hennen</strong>, Daniel&nbsp;Bedau, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters</p>
-                        <p><em>Advanced Physics Research</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Advanced Physics Research</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">May 2024</p>
                     </div>
                     </div>
@@ -73,7 +73,7 @@
                     <div class="card-content">
                         <h3>Reliability Effects of Lateral Filament Confinement by Nano-Scaling the Oxide in Memristive Devices</h3>
                         <p>Pascal&nbsp;Stasner, Nils&nbsp;Kopperberg, Kristoffer&nbsp;Schnieders, <strong>Tyler&nbsp;Hennen</strong>, Stefan&nbsp;Wiefels, Stephan&nbsp;Menzel, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters</p>
-                        <p><em>Nanoscale Horizons</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Nanoscale Horizons</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">March 2024</p>
                     </div>
                     </div>
@@ -85,7 +85,7 @@
                     <div class="card-content">
                         <h3>Physical Origin of Threshold Switching in Amorphous Chromium-Doped V<sub>2</sub>O<sub>3</sub></h3>
                         <p>Johannes&nbsp;Mohr, Christopher&nbsp;Bengel, <strong>Tyler&nbsp;Hennen</strong>, Daniel&nbsp;Bedau, Stephan&nbsp;Menzel, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters</p>
-                        <p><em>physica status solidi (a)</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>physica status solidi (a)</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">December 2023</p>
                     </div>
                     </div>
@@ -97,7 +97,7 @@
                     <div class="card-content">
                         <h3>Harnessing Stochasticity and Negative Differential Resistance for Unconventional Computation</h3>
                         <p><strong>Tyler&nbsp;Hennen</strong></p>
-                        <p><em>RWTH Aachen University</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>RWTH Aachen University</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">July 2023</p>
                     </div>
                     </div>
@@ -121,7 +121,7 @@
                     <div class="card-content">
                         <h3>Fabrication of Highly Resistive NiO Thin Films for Nanoelectronic Applications</h3>
                         <p>Johannes&nbsp;Mohr, <strong>Tyler&nbsp;Hennen</strong>, Daniel&nbsp;Bedau, Joyeeta&nbsp;Nag, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters</p>
-                        <p><em>Advanced Physics Research</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Advanced Physics Research</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">October 2022</p>
                     </div>
                     </div>
@@ -133,7 +133,7 @@
                     <div class="card-content">
                         <h3>A High Throughput Generative Vector Autoregression Model for Stochastic Synapses</h3>
                         <p><strong>Tyler&nbsp;Hennen</strong>, Alexander&nbsp;Elias, Jean&#8209;François&nbsp;Nodin, Gabriel&nbsp;Molas, Rainer&nbsp;Waser, Dirk&nbsp;J.&nbsp;Wouters, Daniel&nbsp;Bedau</p>
-                        <p><em>Frontiers in Neuroscience</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Frontiers in Neuroscience</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">August 2022</p>
                     </div>
                     </div>
@@ -145,7 +145,7 @@
                     <div class="card-content">
                         <h3>Counting Molecules: Python Based Scheme for Automated Enumeration and Categorization of Molecules in Scanning Tunneling Microscopy Images</h3>
                         <p>Jack&nbsp;Hellerstedt, Aleš&nbsp;Cahlík, Martin&nbsp;Švec, Oleksandr&nbsp;Stetsovych, <strong>Tyler&nbsp;Hennen</strong></p>
-                        <p><em>Software Impacts</em><span class="open-access"> (Open Access)</span></p>
+                        <p><em>Software Impacts</em></p><p><span class="open-access">(Open Access)</span></p>
                         <p class="publication-date">May 2022</p>
                     </div>
                     </div>
